--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
     "reflect-metadata": "^0.1.13",
