--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^6.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.26"
+    "typeorm": "^0.2.26",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "typescript": "^4.0.2"
